<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Sherlock "</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome Detective</string>
    <string name="add_mission">Add Mission</string>
    <string name="misson_one">Mission One</string>
    <string name="mission_two">Mission Two</string>
    <string name="mission_three">Mission Three</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height (in cms)</string>
    <string name="hair">Hair Color</string>
    <string name="notes">Notes</string>
    <string name="heading">Enter the Details</string>
    <string name="objective">Objectives</string>
    <string name="client">Client</string>
    <string name="suspect">Suspect</string>
    <string name="enter_details">Enter</string>
    
    
    
    <string name="no_missions">No Mission</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save_mission">Save Details </string>
    <string name="hint_name">Name (Required)</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_height">Height (in cms)</string>
    <string name="hint_haircolor">Hair Color</string>
    <string name="hint_age">Age</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_notes">Notes</string>
     <string name="hint_objectives">Enter the Objectives here</string>
    <string name="label_name">Name:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_height">Height (in cms):</string>
    <string name="label_haircolor">Hair Color:</string>
    <string name="label_age">Age:</string>
    <string name="label_notes">Notes:</string>
    <string name="label_phone">Phone:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the mission</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a mission name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="objectives">Objectives</string>
    <string name="save_objective">Save Objective</string>
    <string name="label_objectives">Objective:</string>
    <string name="hint_objective_name">Mission Name</string>
    <string name="objective_name">Name</string>
    

</resources>
