<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="vertical"
    android:rowCount="13" >

    <TextView
        android:id="@+id/genderTextView"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="78dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:text="@string/height"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/hairTextView"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:text="@string/hair"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/notesTextView"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="7"
        android:text="@string/notes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="wrap_content"
        android:layout_height="118dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|top"
        android:layout_row="7"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:ems="10" />

    <RadioButton
        android:id="@+id/femaleRadioButton"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/female" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="5"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/hairEditText"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="6"
        android:ems="10" />

    <RadioButton
        android:id="@+id/maleRadioButton"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="4"
        android:text="@string/male" />

    <TextView
        android:id="@+id/nametextView"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="2"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/headingTextView"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:text="@string/heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</GridLayout>