<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/objectiveGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal" >

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="1" />

    <TextView
        android:id="@+id/objectiveTextView"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="@string/objective"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/objectiveEditText"
        android:layout_width="262dp"
        android:layout_height="190dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/suspectButton"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="1"
        android:text="@string/suspect" />

    <Button
        android:id="@+id/clientButton"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1"
        android:text="@string/client" />

</GridLayout>
